--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
 </head>
 
-<body class="mat-typography">
+<body>
   <app-root>
 
   </app-root>
