--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ASMWEB208</title>
+  <title>F SHOP</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/png" href="/favicon.png" />
   <script src="https://kit.fontawesome.com/06778a4aed.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
